--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Responsive Photo Gallery</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Arimo:400,700|Forum|Gloria+Hallelujah" rel="stylesheet">
 </head>
 <body>
       
@@ -32,7 +33,7 @@
 
     </div>
     <footer>
-        <p> Jake Johnson 2018</p>
+        <p> Jake Johnson &copy; 2018</p>
     </footer>
 </body>
 </html>
