--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     </div>
     <footer>
-        <p> Jake Johnson &copy; 2018</p>
+      <p><a href="https://github.com/jakerjohnson94"> Jake Johnson &copy; 2018 </a> </p>
     </footer>
 </body>
 
